remove namespace undrop target
